# titan

./: .gitignore  CLAUDE.md  Cargo.toml  FIXES.md
.ai/reports/: cargo-check.json  cargo-clippy.json  cargo-clippy.stderr  warnings-unique.json
src/: lib.rs
src/orchestration/: shmem.rs
titan/: Cargo.toml
titan-derive/: Cargo.toml
titan-derive/src/: lib.rs
titan/src/: control.rs  data.rs  ipc.rs  lib.rs  mpsc.rs  net.rs  runtime.rs  spsc.rs  sync.rs  trace.rs
titan/src/control/: client.rs  driver.rs  handshake.rs  types.rs
titan/src/data/: channel.rs  frame.rs  packing.rs  transport.rs  types.rs
titan/src/ipc/: mpsc.rs  shmem.rs  spsc.rs
titan/src/mpsc/: ring.rs
titan/src/net/: endpoint.rs  socket.rs
titan/src/protocol/: message.rs
titan/src/runtime/: client.rs  driver.rs  timing.rs  topology.rs
titan/src/runtime/driver/: commands.rs  control_thread.rs  protocol.rs  reassembly.rs  reorder.rs  retransmit.rs  rx_thread.rs  timing.rs  tx_thread.rs
titan/src/runtime/timing/: scoped.rs  slab.rs  tick.rs  time.rs  wheel.rs
titan/src/spsc/: ring.rs
titan/src/sync/: spsc.rs
titan/tests/: driver_to_driver.rs  mtu_packing_bench.rs  udp_dispatch_bench.rs
titan/tests/ui/: box_not_allowed.rs  box_not_allowed.stderr  missing_repr.rs  missing_repr.stderr  mutex_not_allowed.rs  mutex_not_allowed.stderr  raw_pointer_not_allowed.rs  raw_pointer_not_allowed.stderr  reference_not_allowed.rs  reference_not_allowed.stderr  rwlock_not_allowed.rs  rwlock_not_allowed.stderr  vec_not_allowed.rs  vec_not_allowed.stderr  wheel_cross_brand.rs  wheel_cross_brand.stderr
