[package]
name = "titan"
version.workspace = true
edition.workspace = true

[dependencies]
core_affinity = "0.8.3"
minstant = { version = "0.1.7", features = ["fallback-coarse"] }
rand = "0.9.2"
rustix.workspace = true
titan-derive = { path = "../titan-derive" }
serde = { version = "1.0.228", features = ["derive"] }
postcard = "1.0.3"

[dev-dependencies]
trybuild.workspace = true

[[bin]]
name = "spsc_bench"
path = "src/bin/spsc_bench.rs"
