[package]
name = "titan"
version.workspace = true
edition.workspace = true

[features]
default = []
tracing = ["dep:tracing", "dep:tracing-subscriber"]

[dependencies]
libc = "0.2.179"
core_affinity = "0.8.3"
num_cpus = "1.16"
tracing = { version = "0.1.44", optional = true }
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"], optional = true }
minstant = { version = "0.1.7", features = ["fallback-coarse"] }
rand = "0.9.2"
generativity = "1.1.0"
rustix.workspace = true
titan-derive = { path = "../titan-derive" }
serde = { version = "1.0.228", features = ["derive"] }
postcard = "1.0.3"
type_hash = "0.3.0"
thiserror = "2.0.17"

# networking
mio = { version = "1.1.1", features = ["net", "os-poll"] }
#capsule = "0.1.5"
#xsk-rs = "0.8.0"

[dev-dependencies]
serial_test = "3.2.0"
trybuild.workspace = true

[[bin]]
name = "spsc_bench"
path = "src/bin/spsc_bench.rs"
